# labs

./: README.md
04/: README.md
04/task13/: README.md
04/task14/: README.md
05/grade-4/: README.md  zadanie1.c
05/grade-5/: zadanie2.c
05/grade-star/: rle.c
06/: README.md
06/grade-3/: README.md  zadanie1.c
06/grade-4/: zadanie2.c
06/grade-5/: README.md  zadanie3.c
06/grade-star/: sudoku.c
07/: README.md
07/grade-4/: zadanie1.c
08/: README.md
08/grade-4/: README.md  zadanie1.c
08/grade-5/: README.md  zadanie1.c
09/: README.md
10/: script  script.c
12/lab12/grade-3/: README.md
12/lab12/grade-4/: README.md
12/lab12/grade-4/include/: room.h
12/lab12/grade-4/src/: main.c
12/lab12/grade-5/: README.md
12/lab12/grade-5/include/: room.h
12/lab12/grade-5/src/: main.c  room.c
12/lab12/grade-star/: README.md
12/lab12/grade-star/src/: room.c
13/lab13/grade-3/: README.md
13/lab13/grade-3/src/: main.c  room.c
13/lab13/grade-4/: README.md
13/lab13/grade-4/src/: room.c
13/lab13/grade-5/: README.md
13/lab13/grade-5/background/: background.c
13/lab13/grade-5/pipes/: CMakeLists.txt  pipes.h  read_pipe.c  write_pipe.c
15/: staff.csv
16/: Makefile  README.md  ex1_create.c  ex2_join.c  ex3_args.c  ex4_cancel.c  ex5_cleanup.c  ex6_sleepsort.c
17/: CMakeLists.txt  Makefile  README.md
17/grade-3/: README.md  test_simple.c
17/grade-4/: Makefile  README.md  test_cmocka.c
17/grade-5/: test_full.c
18/: CMakeLists.txt  README.md
18/grade-3/: CMakeLists.txt  README.md
18/grade-3/src/: paint_core.cpp  paint_core.hpp
19/atm/: account.cpp  account.h  atm_engine.h  card.cpp  journal.cpp  main.cpp  recovery.cpp  recovery.h  transaction.cpp  transaction.h  tui.h
19/atm/tests/: test_account.cpp  test_card.cpp
RGR-5/: Makefile  cipher.c  cipher.h  main.c
lab-17/grade-3/: Makefile
lab-17/grade-5/: README.md
lab-18/grade-3/src/: main.cpp
lab-19/: CMakeLists.txt  README.md  run.sh
lab-19/atm/: atm_engine.cpp  card.h  file_storage.cpp  file_storage.h  journal.h
lab-19/atm/tests/: doctest.h  test_journal.cpp
lab10/: fraction.c  fraction.h
lab12/lab12/grade-3/: main.c
lab12/lab12/grade-4/src/: room.c
lab12/lab12/grade-star/include/: room.h
lab12/lab12/grade-star/src/: main.c
lab13/lab13/grade-3/: Makefile
lab13/lab13/grade-3/include/: room.h
lab13/lab13/grade-4/: CMakeLists.txt
lab13/lab13/grade-4/src/: main.c
lab13/lab13/grade-5/: CMakeLists.txt
lab13/lab13/grade-5/background/: CMakeLists.txt  background.h
lab13/lab13/grade-5/src/: main.c
lab14/: zad14.c
lab15/: database.rle  zad15.c
lab4/: 1zadanie.c  2zadanie.c
lab5/: README.md
lab5/grade-5/: README.md
lab5/grade-star/: README.md
lab6/grade-4/: README.md
lab6/grade-star/: README.md
lab7/grade-4/: README.md
lab9/: README.md  skrini.txt  sort.c
rgr5/: README.md  polibi
